# rutube

./: .env  .gitignore  Cargo.toml  connect.sh
migrations/: 0001_videos.sql  0002_videos.sql  0003_videos.sql
pages/: index.html
src/: db.rs  main.rs  models.rs  pages.rs
templates/: home.html  viewer.html
