[package]
name = "rutube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["postgres", "macros", "runtime-tokio-rustls", "chrono", "any"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
axum = { version = "0.6.20", features = ["json", "ws"] }
dotenv = "0.15.0"
rand = "0.8.5"
askama = "0.12.1"
